--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-generic_market_csharp-3D9AC6BB-AF65-4B75-936E-3097A3D0604E;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Host=localhost;Port=5432;Pooling=true;Database=generic-market-csharp;User=postgres;Password=root"
   },
   "Logging": {
     "LogLevel": {
