fix: connection database string

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Pooling=true;Database=generic-market-csharp;User=postgres;Password=root"
+    "DefaultConnection": "Host=localhost;Port=5432;Pooling=true;Database=generic-market-csharp;User Id=postgres;Password=root"
   },
   "Logging": {
     "LogLevel": {
